<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">VolleyBall Record</string>
    <string name="headline">VolleyBall Record</string>
    <string name="start_button">Start</string>
    <string name="continue_button">Continue</string>
    <string name="record_button">Record</string>
    <string name="exit_button">Exit</string>
    <string name="title_activity_initial_set">Information</string>
    <string name="date_set_headline">Enter Date</string>
    <string name="next_button">Next</string>
    <string name="date_team">Enter Teams Name</string>
    <string name="blue_team">Blue Team</string>
    <string name="date_vs">V.S.</string>
    <string name="red_team">Red Team</string>
    <string name="set_player">Set Player</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_number">Enter Number</string>
    <string name="enter_button">Enter</string>
    <string name="set_sub_title">Set Substitute</string>
    <string name="set_sub_player_name">Enter Player\'s Name</string>
    <string name="set_sub_player_number">Enter Player\'s Number</string>
    <string name="enter_place">Enter Player\'s Position</string>
    <string name="set_sub_button">Add Player</string>
    <string name="number">Number</string>
    <string name="name">Name</string>
    <string name="place">Position</string>
    <string name="set_start_button">Start</string>
    <string name="title_activity_play_game">Play Game</string>
    <string name="start_attack_button">Attack</string>
    <string name="start_defence_button">Defence</string>
    <string name="start_set_button">Set</string>
    <string name="start_serve_button">Serve</string>
    <string name="start_block_button">Block</string>
    <string name="start_change_button">Change</string>
    <string name="start_lchange_button">L Change</string>
    <string name="mistake_button">Mistake</string>
    <string name="invalid_button">Invalid</string>
    <string name="success_button">Success</string>
    <string name="touch_button">Touch</string>
    <string name="change_button">Change</string>
    <string name="initial_score">0</string>
    <string name="title_activity_activity_start">ActivityStart</string>
    <string name="blue_win">Blue Win</string>
    <string name="red_win">Red Win</string>
    <string name="back">Back</string>
    <string name="record_select_game">Select Game</string>
    <string name="game_data">Game Data</string>
    <string name="title_activity_record">Record</string>
    <string name="player_data">Player Data</string>
    <string name="record_total">Total</string>
    <string name="record_success">Success</string>
    <string name="record_mistake">Mistake</string>
    <string name="record_rate">Rate</string>
    <string name="delete">Delete</string>
    <string name="set_format">Game Format</string>
    <string name="Re_rotate">Previous</string>
    <string name="rotate">Rotate</string>
    <string name="click_player">Click the player to setup.</string>
    <string name="set_sub_number_confirm">You need to enter the player\'s number.</string>
    <string name="set_sub_player_confirm">You can\'t add more than 6 player.</string>

    <string name="S">S</string>
    <string name="MB">MB</string>
    <string name="WS">WS</string>
    <string name="L">L</string>
    <string name="set_player_2_all">You need to setup all player to continue.</string>
    <string name="BO3">BO3</string>
    <string name="BO5">BO5</string>
    <string name="BO1">BO1</string>
    <string name="No_game_data">There are no Game Data.</string>
    <string name="delete_comfirm">Are you sure you want delete all data?</string>
    <string name="deleted_all">You have deleted all Data.</string>
    <string name="Yes">Yes</string>
    <string name="Cancel">Cancel</string>
    <string name="Warning">Warning</string>
    <string name="help">Help</string>
    <string name="title_activity_help">Help</string>
    <string name="use_info">Help</string>
    <string name="help_1">help_1</string>
    <string name="help_2">help_2</string>
    <string name="help_3">help_3</string>
    <string name="help_4">help_4</string>
    <string name="help_5">help_5</string>
    <string name="action_intro_Attack">action_intro_Attack</string>
    <string name="action_intro_Defence">action_intro_Defence</string>
    <string name="action_intro_Attack_1">action_intro_Attack_1</string>
    <string name="action_intro_Attack_2">action_intro_Attack_2</string>
    <string name="action_intro_Attack_3">action_intro_Attack_3</string>
    <string name="action_intro_Attack_4">action_intro_Attack_4</string>
    <string name="action_intro_Defence_1">action_intro_Defence_1</string>
    <string name="action_intro_Defence_2">action_intro_Defence_2</string>
    <string name="action_intro_Defence_3">action_intro_Defence_3</string>
    <string name="action_intro_Defence_4">action_intro_Defence_4</string>
    <string name="action_intro_Block">action_intro_Block</string>
    <string name="action_intro_Block_1">action_intro_Block_1</string>
    <string name="action_intro_Block_2">action_intro_Block_2</string>
    <string name="action_intro_Block_3">action_intro_Block_3</string>
    <string name="action_intro_Block_4">action_intro_Block_4</string>
    <string name="action_intro_Block_5">action_intro_Block_5</string>
    <string name="action_intro_Serve">action_intro_Serve</string>
    <string name="action_intro_Serve_1">action_intro_Serve_1</string>
    <string name="action_intro_Serve_2">action_intro_Serve_2</string>
    <string name="action_intro_Serve_3">action_intro_Serve_3</string>
    <string name="action_intro_Serve_4">action_intro_Serve_4</string>
    <string name="Win">Win</string>
    <string name="NoplayerChange">There are no player to change</string>
    <string name="NoGamePlaying">There are no game playing</string>
    <string name="serve_team">Serve Team</string>
    <string name="Set_Serve_Team">Click the arrow above to set the serve team.</string>
    <string name="help_intro">Help introduction</string>
    <string name="action_intro">Action_intro</string>
</resources>
