<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF5F4F6" >

    <TextView
        android:id="@+id/mainmenu_headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFF5F4F6"
        android:text="@string/headline"
        android:layout_centerHorizontal="true"
        android:paddingTop="70dp"
        android:textSize="35sp"/>

    <Button
        android:id="@+id/mainmenu_startbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="#FFF5F4F6"
        android:text="@string/start_button"
        android:layout_below="@id/mainmenu_headline"
        android:layout_marginTop="60dp"
        android:textSize="20sp"
        />

    <Button
        android:id="@+id/mainmenu_continuebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mainmenu_startbutton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:background="#FFF5F4F6"
        android:text="@string/continue_button"
        android:textSize="20sp" />

    <Button
        android:id="@+id/mainmenu_recordbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFF5F4F6"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/mainmenu_continuebutton"
        android:layout_marginTop="5dp"
        android:text="@string/record_button"
        android:textSize="20sp"
        />

    <Button
        android:id="@+id/mainmenu_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFF5F4F6"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/mainmenu_recordbutton"
        android:text="@string/help"
        android:layout_marginTop="5dp"
        android:textSize="20sp" />

    <Button
        android:id="@+id/mainmenu_exitbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFF5F4F6"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/mainmenu_help"
        android:text="@string/exit_button"
        android:layout_marginTop="5dp"
        android:textSize="20sp"/>

</RelativeLayout>
