<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF5F4F6">

    <Gallery
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#FFE1A873"/>

    <Gallery
        android:layout_marginTop="50dp"
        android:layout_width="fill_parent"
        android:layout_height="250dp"
        android:background="@drawable/vollyballcourt_2"
        android:id="@+id/start_court"/>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/start_player_3_layout"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp">

        <Button
            android:id="@+id/start_player_3"
            android:layout_width="45dp"
            android:layout_height="65dp"
            android:background="@drawable/player_1"
            android:onClick="start_player_function"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="20sp"
            android:id="@+id/start_player_number_3"
            android:layout_below="@id/start_player_3"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/start_player_2_layout"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentRight="true"
        android:layout_marginTop="90dp"
        android:layout_marginRight="70dp">

        <Button
            android:layout_width="45dp"
            android:layout_height="65dp"
            android:id="@+id/start_player_2"
            android:background="@drawable/player_1"
            android:onClick="start_player_function"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="20sp"
            android:id="@+id/start_player_number_2"
            android:layout_below="@id/start_player_2"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/start_player_4_layout"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentLeft="true"
        android:layout_marginTop="90dp"
        android:layout_marginLeft="70dp">

        <Button
            android:layout_width="45dp"
            android:layout_height="65dp"
            android:id="@+id/start_player_4"
            android:background="@drawable/player_1"
            android:onClick="start_player_function"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="20sp"
            android:id="@+id/start_player_number_4"
            android:layout_below="@id/start_player_4"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/start_player_1_layout"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentRight="true"
        android:layout_below="@id/start_player_2_layout"
        android:layout_marginTop="20dp"
        android:layout_marginRight="70dp">

        <Button
            android:layout_width="45dp"
            android:layout_height="65dp"
            android:id="@+id/start_player_1"
            android:background="@drawable/player_1"
            android:onClick="start_player_function"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="20sp"
            android:id="@+id/start_player_number_1"
            android:layout_below="@id/start_player_1"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/start_player_5_layout"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentLeft="true"
        android:layout_below="@id/start_player_4_layout"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="70dp">

        <Button
            android:layout_width="45dp"
            android:layout_height="65dp"
            android:id="@+id/start_player_5"
            android:background="@drawable/player_1"
            android:onClick="start_player_function"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="20sp"
            android:id="@+id/start_player_number_5"
            android:layout_below="@id/start_player_5"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/start_player_6_layout"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_centerHorizontal="true"
        android:layout_below="@id/start_player_3_layout"
        android:layout_marginTop="15dp">

        <Button
            android:layout_width="45dp"
            android:layout_height="65dp"
            android:id="@+id/start_player_6"
            android:background="@drawable/player_1"
            android:onClick="start_player_function"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="20sp"
            android:id="@+id/start_player_number_6"
            android:layout_below="@id/start_player_6"
            android:layout_centerInParent="true"/>

    </RelativeLayout>


    <TextView
        android:id="@+id/start_attack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_attack_button"
        android:layout_below="@id/start_court"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="70dp"
        android:onClick="start_event_function"
        android:clickable="true"
        android:textColor="@color/text"/>

    <TextView
        android:id="@+id/start_defence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_defence_button"
        android:layout_below="@id/start_court"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="70dp"
        android:onClick="start_event_function"
        android:clickable="true"
        android:textColor="@color/text" />

    <TextView
        android:id="@+id/start_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_set_button"
        android:layout_below="@id/start_attack"
        android:textSize="25sp"
        android:layout_marginTop="25dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="70dp"
        android:onClick="start_event_function"
        android:clickable="true"
        android:textColor="@color/text" />

    <TextView
        android:id="@+id/start_serve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_serve_button"
        android:layout_below="@id/start_defence"
        android:textSize="25sp"
        android:layout_marginTop="25dp"
        android:layout_alignLeft="@id/start_defence"
        android:onClick="start_event_function"
        android:clickable="true"
        android:textColor="@color/text"/>

    <TextView
        android:id="@+id/start_block"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_block_button"
        android:layout_below="@id/start_set"
        android:textSize="25sp"
        android:layout_marginTop="25dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="70dp"
        android:onClick="start_event_function"
        android:clickable="true"
        android:textColor="@color/text" />

    <TextView
        android:id="@+id/start_change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_change_button"
        android:layout_below="@id/start_serve"
        android:textSize="25sp"
        android:layout_marginTop="25dp"
        android:layout_alignLeft="@id/start_defence"
        android:onClick="start_event_function"
        android:clickable="true"
        android:textColor="@color/text"/>

    <TextView
        android:id="@+id/start_lchange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_lchange_button"
        android:layout_below="@id/start_block"
        android:textSize="25sp"
        android:layout_marginTop="25dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="70dp"
        android:onClick="start_event_function"
        android:visibility="invisible"
        android:textColor="@color/text"/>

    <TextView
        android:id="@+id/start_red_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/red_team"
        android:textSize="20sp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="60dp"/>

    <TextView
        android:id="@+id/start_blue_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/blue_team"
        android:textSize="20sp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="60dp"/>

    <TextView
        android:id="@+id/start_blue_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="110dp"
        android:layout_below="@+id/start_blue_name"
        android:text="@string/initial_score"
        android:textSize="30sp" />

    <Button
        android:id="@+id/serve_team"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_alignBottom="@id/start_blue_score" />

    <TextView
        android:id="@+id/start_serve_team_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/serve_team"
        android:text="@string/serve_team"/>

    <TextView
        android:id="@+id/start_red_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="110dp"
        android:layout_below="@+id/start_red_name"
        android:text="@string/initial_score"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/BlueSetScore_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="35sp"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        />

    <TextView
        android:id="@+id/RedSetScore_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="35sp"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/re_rotate"
        android:textSize="15sp"
        android:text="@string/Re_rotate"
        android:layout_alignBottom="@id/start_court"
        android:layout_alignLeft="@id/start_court"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rotate"
        android:textSize="15sp"
        android:text="@string/rotate"
        android:layout_alignBottom="@id/start_court"
        android:layout_alignRight="@id/start_court"/>


</RelativeLayout>